# stm32f401cc_Interfacing_CMake

./: README.md
COTS-stm32f401cc/: CMakeLists.txt  Drivers.cmake  arm-gcc-toolchain.cmake
COTS-stm32f401cc/APP/MGPIO_TEST/: CMakeLists.txt  main.c
COTS-stm32f401cc/APP/MNVIC_TEST/: CMakeLists.txt  main.c
COTS-stm32f401cc/APP/MRCC_TEST/: CMakeLists.txt  main.c
COTS-stm32f401cc/APP/MSTK_TEST/: CMakeLists.txt  main.c
COTS-stm32f401cc/COMMON/: BIT_MATH.h  STD_TYPES.h  STM32F401CCUX_FLASH.ld  startup_stm32f401xc.S
COTS-stm32f401cc/MCAL/MGPIO/inc/: MGPIO.h  MGPIO_private.h
COTS-stm32f401cc/MCAL/MGPIO/src/: MGPIO.c
COTS-stm32f401cc/MCAL/MNVIC/inc/: MNVIC.h  MNVIC_cfg.h  MNVIC_private.h
COTS-stm32f401cc/MCAL/MNVIC/src/: MNVIC.c
COTS-stm32f401cc/MCAL/MRCC/inc/: MRCC.h  MRCC_private.h
COTS-stm32f401cc/MCAL/MRCC/src/: MRCC.c
COTS-stm32f401cc/MCAL/MSTK/inc/: MSTK.h  MSTK_private.h
COTS-stm32f401cc/MCAL/MSTK/src/: MSTK.c
